backend/api/tests/integration/image/snapshots/integration__image__tag__create.snap
---
source: tests/integration/image/tag.rs
expression: body
---
{
  "index": 3,
  "display_name": "test name"
}
