backend/api/tests/integration/image/snapshots/integration__image__tag__list.snap
---
source: tests/integration/image/tag.rs
expression: body

---
{
  "image_tags": [
    {
      "index": 0,
      "display_name": "A",
      "id": "[id]"
    },
    {
      "index": 1,
      "display_name": "B",
      "id": "[id]"
    },
    {
      "index": 2,
      "display_name": "C",
      "id": "[id]"
    }
  ]
}
