backend/api/tests/integration/image/snapshots/integration__image__tag__update_none.snap
---
source: tests/integration/image/tag.rs
expression: body

---
{
  "image_tags": [
    {
      "index": 0,
      "display_name": "A"
    },
    {
      "index": 1,
      "display_name": "B"
    },
    {
      "index": 2,
      "display_name": "C"
    }
  ]
}
