backend/api/tests/integration/image/snapshots/integration__image__tag__update_only_index.snap
---
source: tests/integration/image/tag.rs
expression: body
---
{
  "image_tags": [
    {
      "index": 0,
      "display_name": "A"
    },
    {
      "index": 2,
      "display_name": "C"
    },
    {
      "index": 3,
      "display_name": "B"
    }
  ]
}
