backend/api/tests/integration/image/snapshots/integration__image__tag__update_with_index.snap
---
source: tests/integration/image/tag.rs
expression: body
---
{
  "image_tags": [
    {
      "index": 0,
      "display_name": "A"
    },
    {
      "index": 2,
      "display_name": "C"
    },
    {
      "index": 15,
      "display_name": "test"
    }
  ]
}
